syntax = "proto3";

package user;

option go_package = "github.com/saloni111/RealTimeDocColabPlatform/user-service/proto;user";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterUserResponse {
  string user_id = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
}
